Werkende versie 2, met yaml en con strings correct

--- a/RaadHetWoordApi/appsettings.json
+++ b/RaadHetWoordApi/appsettings.json
@@ -1,7 +1,7 @@
 {
 
   "ConnectionStrings": {
-    "DefaultConnection": "Host=localhost;Database=raadhetwoord;Username=admin;Password=geheim"
+    "DefaultConnection": "Host=postgres;Database=raadhetwoord;Username=admin;Password=geheim"
   },
   "Logging": {
     "LogLevel": {
